--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /WindowsClient/SDM.WinClient/SDM.Service/obj
 /WindowsClient/SDM.WinClient/SDM.WinClient/bin
 /WindowsClient/SDM.WinClient/SDM.WinClient/obj
+/WindowsClient/SDM.WinClient/SDM.WinClient.v12.suo
