--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@
 /WindowsClient/SDM.WinClient/SDM.Service/obj
 /WindowsClient/SDM.WinClient/SDM.WinClient/bin
 /WindowsClient/SDM.WinClient/SDM.WinClient/obj
+/WindowsClient/SDM.WinClient/SDM.WinClient.v12.suo
+/WindowsClient/SDM.WinClient/SDM.DTO/obj
+/WindowsClient/SDM.WinClient/SDM.DTO/bin
