1.删除。txt文件                     -少曦

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,4 @@
 /WindowsClient/SDM.WinClient/SDM.WinClient.v12.suo
 /WindowsClient/SDM.WinClient/SDM.DTO/obj
 /WindowsClient/SDM.WinClient/SDM.DTO/bin
+/AndroidClient/新建文本文档.txt
