--- a/WindowsClient/SDM.WinClient/packages/repositories.config
+++ b/WindowsClient/SDM.WinClient/packages/repositories.config
@@ -2,4 +2,5 @@
 <repositories>
   <repository path="..\SDM.Common\packages.config" />
   <repository path="..\SDM.Model\packages.config" />
+  <repository path="..\SDM.Repository\packages.config" />
 </repositories>
