--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,4 @@
 /WindowsClient/SDM.WinClient/SDM.DTO/obj
 /WindowsClient/SDM.WinClient/SDM.DTO/bin
 /AndroidClient/新建文本文档.txt
+/WindowsClient/SDM.WinClient/SDM.WinClient/Properties/licenses.licx
