--- a/WindowsClient/SDM.WinClient/SDM.Common/SDM.Common.csproj
+++ b/WindowsClient/SDM.WinClient/SDM.Common/SDM.Common.csproj
@@ -62,7 +62,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\SDM.WinClient\SDM.WinClient.csproj">
+      <Project>{b6d40e29-3dc5-4e40-b67b-ef825e2b4a9d}</Project>
+      <Name>SDM.WinClient</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
