--- a/WindowsClient/SDM.WinClient/SDM.Repository/SDM.Repository.csproj
+++ b/WindowsClient/SDM.WinClient/SDM.Repository/SDM.Repository.csproj
@@ -53,9 +53,9 @@
     <Compile Include="Repository.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\SDM.Common\SDM.Common.csproj">
-      <Project>{1121fcbc-7179-4fa4-a412-494ae7b37584}</Project>
-      <Name>SDM.Common</Name>
+    <ProjectReference Include="..\SDM.DTO\SDM.DTO.csproj">
+      <Project>{a81c6bf2-f3d8-46b4-9db8-86f220244013}</Project>
+      <Name>SDM.DTO</Name>
     </ProjectReference>
     <ProjectReference Include="..\SDM.IRepository\SDM.IRepository.csproj">
       <Project>{c20458c5-86c5-4674-b389-b17d4b50b86f}</Project>
