--- a/WindowsClient/SDM.WinClient/SDM.Code/SDM.Code.csproj
+++ b/WindowsClient/SDM.WinClient/SDM.Code/SDM.Code.csproj
@@ -33,6 +33,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,6 +43,9 @@
   <ItemGroup>
     <Compile Include="BaseSecurity\Crypto.cs" />
     <Compile Include="Extension\ObjectShredder.cs" />
+    <Compile Include="Helper\FTPHelper.cs" />
+    <Compile Include="Helper\HttpHelper.cs" />
+    <Compile Include="Helper\UpdateServer.cs" />
     <Compile Include="Helper\VerificationCodeHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Specifications\AndNotSpecification.cs" />
