--- a/WindowsClient/SDM.WinClient/SDM.DTO/SDM.DTO.csproj
+++ b/WindowsClient/SDM.WinClient/SDM.DTO/SDM.DTO.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entity.cs" />
+    <Compile Include="Main\User.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SelectResult.cs" />
